# python-pandas-etl-aws

./: .gitignore  .~lock.Sales.xlsx#  CHANGELOG.md  Dockerfile  Errors.xlsx  README.md  Sales.xlsx  docker-compose.yml  pyproject.toml
app/: batch_processor_schema.py  bucket_infrastructure.py  config.py  db.py  exception_service.py  main.py  processor.py  processor_schema.py
app/infrastructure/: bucket_infrastructure.py  config.py  db.py  repository_infrastructure.py
app/schemas/: batch_processor_schema.py  processor_schema.py
app/services/: processor.py
